Changed key attribute values to hash and range keys
