# backend/target/generated-sources/swagger/swagger.json
@@ -268,19 +268,19 @@
         "description" : "Returns the details of the therapist type or area given by client",
         "operationId" : "getTherapistByNTA",
         "parameters" : [ {
-          "name" : "nextToken",
+          "name" : "therapistArea",
           "in" : "query",
-          "required" : false,
+          "description" : "Area of therapist being searched",
+          "required" : true,
           "style" : "form",
           "explode" : true,
           "schema" : {
             "type" : "string"
           }
         }, {
-          "name" : "therapistArea",
+          "name" : "nextToken",
           "in" : "query",
-          "description" : "Area of therapist being searched",
-          "required" : true,
+          "required" : false,
           "style" : "form",
           "explode" : true,
           "schema" : {
